--- a/example/index.html
+++ b/example/index.html
@@ -6,25 +6,180 @@
 
 body {
   font-family: sans-serif;
-  max-width: 800px;
   margin: auto;
 }
 
-.lst {
+.paletteSet {
+  display: flex;
+  flex-wrap: wrap;
+}
+.paletteGroup {
+  flex: 1 1 50%;
+  /*flex: 1 1 25%;*/
+}
+.palette {
   display: flex;
 }
-.lst > * {
-  flex: 1
-}
-.gen-285 {
+.palette > * {
+  flex: 1 1 0;
   font-size: 1px;
+  line-height: 20px;
 }
 
-input {
-  font-family: sans-serif;
-  font-size: 14px;
+.palette-original {
+  display: none;
 }
 
+.paletteGroup:hover .palette-original {
+  display: flex;
+}
+
+.paletteGroup:hover .palette-dinamic {
+  display: none;
+}
+
+
+
+.ColorPicker {
+  padding: 0.5em;
+  display: inline-flex;
+  background: hsl(0, 0%, 80%);
+}
+
+.ColorPicker--small .ColorPicker-field  { width: 10em; height: 10em; }
+.ColorPicker--small .ColorPicker-slider { width: 1em;  }
+
+.ColorPicker--large .ColorPicker-field  { width: 15em; height: 15em; }
+.ColorPicker--large .ColorPicker-slider { width: 1.5em;}
+
+.ColorPicker-dragger {
+  user-select: none;
+  display: flex;
+}
+
+.ColorPicker-field {
+  box-shadow: 0 0 1px 1px currentColor;
+  transition: box-shadow 200ms ease-out;
+  position: relative;
+  height: 100%;
+  float: left;
+  margin-right: 5px;
+  background:
+    linear-gradient(to top, hsl(0, 0%, 0%) 0%, hsla(0, 0%, 0%, 0) 100%),
+    linear-gradient(to right, hsl(0, 0%, 100%) 0%, hsla(0, 0%, 100%, 0) 100%);
+}
+
+.ColorPicker-fieldSelector {
+  pointer-events: none;
+  box-shadow: 0 0 0 2px currentColor;
+  transition: box-shadow 200ms ease-out;
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  margin-left: -7px;
+  margin-bottom: -7px;
+  background: hsl(0, 0%, 100%);
+  border-radius: 10px;
+  z-index: 10;
+}
+
+.ColorPicker-slider {
+  box-shadow: 0 0 1px 1px currentColor;
+  transition: box-shadow 200ms ease-out;
+  position: relative;
+  background: linear-gradient(#f00 0%, #f0f 17%, #00f 34%, #0ff 50%, #0f0 67%, #ff0 84%, #f00 100%);
+}
+
+.ColorPicker-sliderSelector {
+  pointer-events: none;
+  position: absolute;
+  background: #fff;
+  border-bottom: 1px solid #000;
+  right: -3px;
+  margin-top: -1px;
+  width: 100%;
+  height: 2px;
+}
+
+.ColorPicker-aside {
+  display: flex;
+  flex-direction: column;
+  margin-left: 0.25em
+}
+
+.ColorPicker-stage {
+  display: flex;
+  margin-bottom: 0.5em
+}
+
+.ColorPicker-colorBlockNext,
+.ColorPicker-colorBlockCurrent {
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  flex: 1 1 0%;
+  height: 1.5em;
+}
+
+.ColorPicker-colorBlockNext {
+  border-left: 1px solid;
+}
+
+.ColorPicker-colorBlockCurrent {
+  border-right: 1px solid;
+  cursor: pointer;
+}
+
+.ColorPicker-colorBlockPrevious:focus {
+  outline: -webkit-focus-ring-color auto 5px;
+}
+
+.ColorPicker-editing {
+  display: flex;
+  flex: 1;
+}
+
+.ColorPicker-editingItem {
+    display: flex;
+    flex-direction: column;
+}
+
+.ColorPicker-input {
+    display: flex;
+    height: 1.5em;
+    margin-bottom: 0.5em;
+}
+
+.ColorPicker-inputLabel {
+    width: 2em;
+    display: block;
+    text-align: center;
+    align-self: center;
+}
+
+.ColorPicker-inputElem {
+  border: solid 1px;
+  padding: 0.3em;
+  width: 5em;
+}
+
+.ColorPicker-inputElem--invalid {
+  color: red;
+}
+
+.ColorPicker-actions {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.ColorPicker-actionSet {
+  height: 2em;
+  border: 1px solid;
+  width: 6em;
+}
+
+.ColorPicker-actionSet:active {
+  box-shadow: 0 0 2px currentColor
+}
     </style>
   </head>
   <body>
