--- a/example/index.html
+++ b/example/index.html
@@ -26,7 +26,7 @@ body {
   border-top: 1px hsl(0, 0%, 0%) solid;
 }
 
-.ColorPalettePicker-paletteGroupItem:hover .Picker-paletteColors {
+.ColorPalettePicker-paletteGroupItem:hover .Picker-palette {
   display:  none;
 }
 
@@ -38,7 +38,7 @@ body {
   display: none;
   height: 20px
 }
-.Picker-paletteColors {
+.Picker-palette {
   display: flex;
 }
 .Picker-paletteColor {
