add Compact component

--- a/example/index.html
+++ b/example/index.html
@@ -26,11 +26,11 @@ body {
   border-top: 1px hsl(0, 0%, 0%) solid;
 }
 
-.ColorPalettePicker-paletteGroupItem:hover .Picker-palette {
+.ColorPalettePicker-paletteGroupItem.hasGradient:hover .Picker-palette {
   display:  none;
 }
 
-.ColorPalettePicker-paletteGroupItem:hover .Picker-paletteGradient {
+.ColorPalettePicker-paletteGroupItem.hasGradient:hover .Picker-paletteGradient {
   display:  block;
 }
 
