--- a/example/index.html
+++ b/example/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Halogen Color Palette Picker Example</title>
+    <link rel="stylesheet" href="ColorPicker.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
     <style>
 
 body {
@@ -10,183 +12,74 @@ body {
 }
 
 .ColorSchemePicker {
-  width: 500px
+  width: 400px
 }
-
+.ColorPalettePicker-paletteGroup {
+}
 .ColorPalettePicker-paletteGroupHeader {
   padding: 1em 0.5em 0.5em;
+  display: flex;
+  flex-wrap: wrap;
+}
+.ColorPalettePicker-paletteGroupHeaderAction,
+.ColorPalettePicker-paletteGroupHeaderText {
+  flex: 1 1 auto;
 }
 
-.ColorPalettePicker-paletteGroupItems {
+.ColorPalettePicker-paletteGroupHeaderAction {
+  text-align: right;
+}
+
+
+/*
+scroll is disabled for now
+
+.ColorPalettePicker-paletteGroupList {
   max-height: 140px;
   overflow-y: scroll;
-}
+}*/
 
-.ColorPalettePicker-paletteGroupItem + .ColorPalettePicker-paletteGroupItem{
-  border-top: 1px hsl(0, 0%, 0%) solid;
+.ColorPalettePicker-paletteSelected,
+.ColorPalettePicker-paletteGroupItem {
+  box-sizing: border-box;
+  height: 25px;
+  display: block;
 }
-
-.ColorPalettePicker-paletteGroupItem.hasGradient:hover .Picker-palette {
-  display:  none;
-}
-
-.ColorPalettePicker-paletteGroupItem.hasGradient:hover .Picker-paletteGradient {
-  display:  block;
-}
-
-.Picker-paletteGradient {
-  display: none;
-  height: 20px
-}
-.Picker-palette {
-  display: flex;
-}
-.Picker-paletteColor {
-  flex: 1 1 0;
-  height: 20px;
-}
-
-
-.ColorPicker {
-  padding: 0.5em;
-  display: flex;
-  background: hsl(0, 0%, 80%);
-}
-
-/* TODO remove important. it's added for safari which has correct behaviour to not stratch element
-but chrome stretches it need to set some flex prop to fix it.
-*/
-.ColorPicker-field  { width: 250px; height: 250px !important; }
-.ColorPicker-slider { width: 20px;}
-
-.ColorPicker-dragger {
-  user-select: none;
-  display: flex;
-}
-
-.ColorPicker-field {
-  box-shadow: 0 0 1px 1px currentColor;
-  transition: box-shadow 200ms ease-out;
-  position: relative;
-  height: 100%;
-  float: left;
-  margin-right: 5px;
-  background:
-    linear-gradient(to top, hsl(0, 0%, 0%) 0%, hsla(0, 0%, 0%, 0) 100%),
-    linear-gradient(to right, hsl(0, 0%, 100%) 0%, hsla(0, 0%, 100%, 0) 100%);
-}
-
-.ColorPicker-fieldSelector {
-  pointer-events: none;
-  box-shadow: 0 0 0 2px currentColor;
-  transition: box-shadow 200ms ease-out;
-  position: absolute;
-  width: 14px;
-  height: 14px;
-  margin-left: -7px;
-  margin-bottom: -7px;
-  background: hsl(0, 0%, 100%);
-  border-radius: 10px;
-  z-index: 10;
-}
-
-.ColorPicker-slider {
-  box-shadow: 0 0 1px 1px currentColor;
-  transition: box-shadow 200ms ease-out;
-  position: relative;
-  background: linear-gradient(#f00 0%, #f0f 17%, #00f 34%, #0ff 50%, #0f0 67%, #ff0 84%, #f00 100%);
-}
-
-.ColorPicker-sliderSelector {
-  pointer-events: none;
-  position: absolute;
-  background: #fff;
-  border-bottom: 1px solid #000;
-  right: -3px;
-  margin-top: -1px;
-  width: 100%;
-  height: 2px;
-}
-
-.ColorPicker-aside {
-  display: flex;
-  flex-direction: column;
-  margin-left: 0.25em
-}
-
-.ColorPicker-stage {
-  display: flex;
-  margin-bottom: 0.5em
-}
-
-.ColorPicker-colorBlockNext,
-.ColorPicker-colorBlockCurrent {
-  border-top: 1px solid;
-  border-bottom: 1px solid;
-  flex: 1 1 0%;
-  height: 1.5em;
-}
-
-.ColorPicker-colorBlockNext {
-  border-left: 1px solid;
-}
-
-.ColorPicker-colorBlockCurrent {
-  border-right: 1px solid;
+.ColorPalettePicker-paletteGroupItem--action {
   cursor: pointer;
 }
 
-.ColorPicker-colorBlockPrevious:focus {
-  outline: -webkit-focus-ring-color auto 5px;
+.ColorPalettePicker-paletteGroupItem.isActive {
+  box-shadow: 0 0px 0px 1px black inset;
+  padding: 1px 0;
 }
 
-.ColorPicker-editing {
+.ColorPalettePicker-paletteGroupItem + .ColorPalettePicker-paletteGroupItem {
+  margin-top: 1px;
+}
+
+.hasGradient:hover > .ColorPalettePicker-palette {
+  display:  none;
+}
+
+.hasGradient:hover > .ColorPalettePicker-paletteGradient {
+  display:  block;
+}
+
+.ColorPalettePicker-paletteGradient {
+  display: none;
+  height: 100%;
+}
+
+.ColorPalettePicker-palette {
   display: flex;
-  flex: 1;
+  height: 100%;
 }
 
-.ColorPicker-editingItem {
-    display: flex;
-    flex-direction: column;
+.ColorPalettePicker-paletteColor {
+  flex: 1 1 0;
 }
 
-.ColorPicker-input {
-    display: flex;
-    height: 1.5em;
-    margin-bottom: 0.5em;
-}
-
-.ColorPicker-inputLabel {
-    width: 2em;
-    display: block;
-    text-align: center;
-    align-self: center;
-}
-
-.ColorPicker-inputElem {
-  border: solid 1px;
-  padding: 0.3em;
-  width: 5em;
-}
-
-.ColorPicker-inputElem--invalid {
-  color: red;
-}
-
-.ColorPicker-actions {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.ColorPicker-actionSet {
-  height: 2em;
-  border: 1px solid;
-  width: 6em;
-}
-
-.ColorPicker-actionSet:active {
-  box-shadow: 0 0 2px currentColor
-}
     </style>
   </head>
   <body>
