--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Halogen Color Palette Picker Example</title>
     <link rel="stylesheet" href="ColorPicker.css">
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
+    <!-- <link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css"> -->
     <style>
 
 body {
@@ -12,7 +12,7 @@ body {
 }
 
 .ColorSchemePicker {
-  width: 400px
+  width: 600px
 }
 .ColorPalettePicker-paletteGroup {
 }
