--- a/example/index.html
+++ b/example/index.html
@@ -12,7 +12,7 @@ body {
 }
 
 .ColorSchemePicker {
-  width: 600px
+  width: 400px
 }
 .ColorPalettePicker-paletteGroup {
 }
@@ -20,6 +20,10 @@ body {
   padding: 1em 0.5em 0.5em;
   display: flex;
   flex-wrap: wrap;
+}
+.ColorPalettePicker-paletteGroupList {
+  max-height: 300px;
+  overflow-y: auto;
 }
 .ColorPalettePicker-paletteGroupHeaderAction,
 .ColorPalettePicker-paletteGroupHeaderText {
