update nums and styles

--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,10 @@
     <!-- <link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css"> -->
     <style>
 
+html, body{
+  overflow: auto;
+  height: 100%;
+}
 body {
   font-family: sans-serif;
   margin: auto;
@@ -33,15 +37,6 @@ body {
 .ColorPalettePicker-paletteGroupHeaderAction {
   text-align: right;
 }
-
-
-/*
-scroll is disabled for now
-
-.ColorPalettePicker-paletteGroupList {
-  max-height: 140px;
-  overflow-y: scroll;
-}*/
 
 .ColorPalettePicker-paletteSelected,
 .ColorPalettePicker-paletteGroupItem {
